test/fixtures/config/theming/error/nodeModulesNotFound/.gulp.js
var os = require('os');

module.exports = {
  msgs: {
    error: {
      nodeModulesNotFound: 'LOCAL MODULE NOT FOUND {Path: {1}}',
    },
  },
  theme: {
    Path: '**{1}**',
  },
};
